# Replica-Dataset

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  download.sh  win_download.bat  win_merge.bat
Example/: CMakeLists.txt  Example.cpp  ExampleGUI.cpp  FindPTex.cmake  MirrorRenderer.h  MirrorSurface.h
PTexLib/: Assert.h  CMakeLists.txt  EGL.cpp  EGL.h  Finddl.cmake  PLYParser.cpp  PLYParser.h  PTexLib.h
PTexLib/Shaders/: mesh-ptex.frag  mesh-ptex.geom  mesh-ptex.vert
ReplicaSDK/: CMakeLists.txt
ReplicaSDK/include/: Assert.h  EGL.h  GLCheck.h  MeshData.h  MirrorRenderer.h  MirrorSurface.h  PLYParser.h  PTexLib.h
ReplicaSDK/ptex/: EGL.cpp  PLYParser.cpp  PTexLib.cpp
ReplicaSDK/shaders/: atlas.glsl  mesh-depth.frag  mesh-depth.vert  mesh-ptex.frag  mesh-ptex.geom  mesh-ptex.vert  mirror.frag  mirror.vert
ReplicaSDK/src/: MirrorSurface.cpp  render.cpp  viewer.cpp
cmake/: FindPTex.cmake  Finddl.cmake
